# driverless-car-eyebot

./: CMakeLists.txt  README.md  communication.cpp  giveway_detector.svm  make  merged_limit_detector.svm  merged_limitcancel_detector.svm  park.c  park_detector.svm  pedestrian_detector.svm  stop_detector.svm
BaseStation/: Makefile.win  gmon.out  main.cpp  test2.dev  test2.layout
Simulation/Simulation environment/: Carolo_beta.sim
Simulation/Simulation environment/world/: Carolo.wld
Simulation/simulation codes/Lane detection using opencv(Simulation)/: Carolo_beta.cpp
Simulation/simulation codes/Lane detection using scanning method(Simulation)/: lanedetection.c
Simulation/simulation codes/Parking(Simulation)/: park.c
datasets/giveway/: giveway.xml  giveway_test.xml  giveway_train.xml
datasets/limit/: limit.xml  limit_test.xml  limit_train.xml  merged.xml  merged_test.xml  merged_train.xml
datasets/limit2/: limit2.xml  limit2_test.xml  limit2_train.xml
datasets/limitcancel/: limitcancel.xml  limitcancel_test.xml  limitcancel_train.xml  merged_limitcancel_test.xml  merged_limitcancel_train.xml
datasets/limitcancel2/: limitcancel2.xml  limitcancel2_test.xml  limitcancel2_train.xml
datasets/park/: park.xml  park_test.xml  park_train.xml
datasets/pedestrian/: pedestrian.xml  pedestrian_test.xml  pedestrian_train.xml
datasets/stop/: stop.xml  stop_test.xml  stop_train.xml  test.xml
datasets/stop/stoplsq/: merged.xml  training11.xml
datasets/stop/train/: training.xml
eyebot/: eyebot++.h  eyebot.h  eyesim.sh  types.h  x264_config.h
src/: detect.cpp  eyebot.cpp  ftsdv07.cpp  hog_detector.cpp
